Add blog link, update Font Awesome.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
@@ -29,13 +30,11 @@
 				<p>High School student &nbsp;&bull;&nbsp; OIer &nbsp;&bull;&nbsp; Tianjin, China</p>
 				<nav>
 					<ul>
-						<li><a href="https://space.bilibili.com/236178061" class="icon fa-play-circle"><span class="label">Luogu</span></a></li>
-						<li><a href="https://www.luogu.org/space/show?uid=56614" class="icon fa-code"><span class="label">Luogu</span></a></li>
-						<!--
-						<li><a href="http://wpa.qq.com/msgrd?v=3&uin=1046979258&site=qq&menu=yes" class="icon fa-qq"><span class="label">QQ</span></a></li>
-						-->
-						<li><a href="https://github.com/PersicaMoe" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:thomas.x@outlook.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://space.bilibili.com/236178061" class="fas fa-play-circle"><span class="label">Bilibili</span></a></li>
+						<li><a href="https://www.luogu.org/space/show?uid=56614" class="fas fa-code"><span class="label">Luogu</span></a></li>
+						<li><a href="https://persicamoe.github.io/blog" class="fas fa-blog"><span class="label">Blog</span></a></li>
+						<li><a href="https://github.com/PersicaMoe" class="fab fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:thomas.x@outlook.com" class="fas fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</nav>
 				<p>Does the black moon howl?</p>
